<resources>
    <string name="app_name">DataStore Sample App</string>

    <!-- Logging window contents -->
    <string name="appsync_side">AppSync side…</string>
    <string name="local_datastore_side">Local DataStore side…</string>
    <string name="not_yet">Nothing here yet…</string>
    <string name="empty" />

    <!-- Button labels -->
    <string name="create_a_post">Create a post</string>
    <string name="list_all_posts">List all posts</string>
    <string name="update_all_posts">Update all posts</string>
    <string name="delete_all_posts">Delete all posts</string>
    <string name="start_subscription">Subscribe…</string>
    <string name="stop_everything">Stop everything</string>
    <string name="clear_log">Clear log</string>
    <string name="sign_in">Sign in</string>

    <!-- Button abbreviations for landscape mode -->
    <string name="create_abbreviation">CR</string>
    <string name="update_abbreviation">UD</string>
    <string name="delete_abbreviation">DEL</string>
    <string name="query_abbreviation">QY</string>
    <string name="clear_abbreviation">CLR</string>
</resources>
