<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/log_window"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="240dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="bottom"
        android:text="@string/not_yet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/add_post_button"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/create_a_post"
        app:layout_constraintBottom_toTopOf="@+id/log_window"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/list_posts_button"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/list_all_posts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_all_posts" />

    <Button
        android:id="@+id/update_post_button"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:text="@string/update_all_posts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_post_button" />

    <Button
        android:id="@+id/delete_all_posts"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/delete_all_posts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/begin_subscription"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/start_subscription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_posts_button" />

    <Button
        android:id="@+id/stop_everything"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:text="@string/stop_everything"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_post_button" />

    <Button
        android:id="@+id/clear_log"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/clear_log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/begin_subscription" />

</androidx.constraintlayout.widget.ConstraintLayout>
